# web-hydra

./: Dockerfile  Makefile  README.md  __main__.py  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
front/: index.html  package-lock.json  package.json
front/src/: App.vue  main.ts
front/src/components/: DumbButton.vue  Formulate.dumb  Formulate.vue  HydraForm.vue  UrlInput.vue
web-hydra/: __init__.py  __main__.py
web_hydra/: __init__.py  server.py
