[tool.poetry]
name = "web-hydra"
version = "0.1.0"
description = ""
authors = ["Marc Partensky <marc.partensky@gmail.com>"]
license = "GPL2"
readme = "README.md"
packages = [{include = "web_hydra"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
