[tool.poetry]
name = "web-hydra"
version = "0.1.0"
description = "Attempt to add webui to hydra with fastapi."
authors = ["Marc Partensky <marc.partensky@gmail.com>"]
license = "GPL2"
readme = "README.md"
packages = [{include = "web_hydra"}]

[tool.poetry.dependencies]
python = "3.11"
fastapi = "*"
uvicorn = "*"
python-dotenv = "*"
starlette = "^0.25.0"

[tool.poetry.group.dev.dependencies]
black = "*"
pylint = "*"
neovim = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
